--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="style.css">
-    <script>(function(w, d) { w.CollectId = "65427e0120465d1aa0f18fbe"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
-<script>(function(w, d) { w.CollectId = "65427e0120465d1aa0f18fbe"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>    <script>window[['CHIPBOT','DOMAIN','ID'].join('_')] = 'dom_t_CV_mQQXMY0';!function(c,h,i,p,b,o,t){o=h.createElement(i),t=h.getElementsByTagName(i)[0],o.async=1,o.src="https://static.getchipbot.com/edge/p/chipbot.js",t.parentNode.insertBefore(o,t)}(window,document,"script");</script>
+    <script>(function(w, d) { w.CollectId = "652cd653b8a0d51225e59845"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
+    <script>window[['CHIPBOT','DOMAIN','ID'].join('_')] = 'dom_t_CV_mQQXMY0';!function(c,h,i,p,b,o,t){o=h.createElement(i),t=h.getElementsByTagName(i)[0],o.async=1,o.src="https://static.getchipbot.com/edge/p/chipbot.js",t.parentNode.insertBefore(o,t)}(window,document,"script");</script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
