--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           <p>Add the books you are giving in exchange here</p>
         <img src="add.png" alt="add"><br>
         <input type="checkbox" class="box">
-        <p>Use my 0 credits
-        </p>
+        <p><a href = "https://archive.org/details/adventuresofsher00doylrich/page/n1/mode/2up?ref=ol&view=theater" >The Adventure Of Sherlock Holmes</a></p>
+        <p><a href = "https://archive.org/details/wutheringheights0000emil_z8q3/mode/2up?ref=ol&view=theater" >Wuthering Heights</a></p>
     
     </div>
           <div class="take book">
@@ -103,7 +103,8 @@
             <p>Add the books you are taking in exchange here</p>
             <img src="add.png" alt="add"><br>
         <input type="checkbox" class="box">
-        <p>I'll take books later</p>
+        <p><a href = "https://archive.org/details/littlewomenormeg00alcoiala/mode/2up?ref=ol&view=theater" >Little Women</a></p>
+        <p><a href = "https://openlibrary.org/works/OL266178W/Het_Achterhuis?edition=ia%3Alp_the-diary-of-a-young-girl_anne-frank-elinor-basescu" >Het Achterhius</a></p>
         </div>
         </div>
         <button class="btn">Checkout</button>
