--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <img src="add.png" alt="add"><br>
         <input type="checkbox" class="box">
         <p><a href = "https://archive.org/details/adventuresofsher00doylrich/page/n1/mode/2up?ref=ol&view=theater" >The Adventure Of Sherlock Holmes</a></p>
+        <input type="checkbox" class="box">
         <p><a href = "https://archive.org/details/wutheringheights0000emil_z8q3/mode/2up?ref=ol&view=theater" >Wuthering Heights</a></p>
     
     </div>
@@ -104,6 +105,7 @@
             <img src="add.png" alt="add"><br>
         <input type="checkbox" class="box">
         <p><a href = "https://archive.org/details/littlewomenormeg00alcoiala/mode/2up?ref=ol&view=theater" >Little Women</a></p>
+        <input type="checkbox" class="box">
         <p><a href = "https://openlibrary.org/works/OL266178W/Het_Achterhuis?edition=ia%3Alp_the-diary-of-a-young-girl_anne-frank-elinor-basescu" >Het Achterhius</a></p>
         </div>
         </div>
